@@ -2,6 +2,10 @@ python-debian (0.1.15) UNRELEASED; urgency=low
 
   * deb822: Don't ignore leading newlines on field data with apt_pkg
     (Closes: #466753)
+  * changelog: Consistently parse different types of inputs.  The
+    previous implementation added extra newlines when given a file
+    object as input, rather than the result of str.splitlines().
+    (Closes: #539316)
 
  -- John Wright <jsw@debian.org>  Thu, 30 Jul 2009 01:03:49 +0200
 
